--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
 </head>
+
 <body>
     <h1>Form to Apply</h1>
 
     <form action="post">
         <label for="username">Enter your username:</label>
-     <div> 
-        <input type="text" id="username" name="username" placeholder="Enter your user name"></form>
-     </div>
+        <div>
+            <input type="text" id="username" name="username" placeholder="Enter your user name">
+    </form>
+    </div>
 
-     <div>
+    <div>
         <label>Gender:</label>
         <input type="radio" id="male" name="gender" value="male">
         <label for="male">Male</label>
         <input type="radio" id="female" name="gender" value="female">
         <label for="female">Female</label>
     </div>
+    <div>
+        <input type="checkbox" id="checkB" name="box" value="yes" <label for="checkB">Subscribe to our channel</label>
+    </div>
+    <div>
+        <textarea id="comment" name="comment" rows="2" cols="20"></textarea>
+    </div>
 </body>
+
 </html>
