--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Student Information Form</title>
 </head>
-
 <body>
-    <h1>Form to Apply</h1>
-
-    <form action="post">
-        <label for="username">Enter your username:</label>
-        <div>
-            <input type="text" id="username" name="username" placeholder="Enter your user name">
-    </form>
-    </div>
-
-    <div>
-        <label>Gender:</label>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label>
-    </div>
-    <div>
-        <input type="checkbox" id="checkB" name="box" value="yes" <label for="checkB">Subscribe to our channel</label>
-    </div>
-    <div>
-        <textarea id="comment" name="comment" rows="2" cols="20"></textarea>
+    <div class="form-container">
+        <h2>Student Information Form</h2>
+        <form action="#" method="post">
+            <div class="form-group">
+                <label for="name">Full Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+            </div>
+            <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="number" id="age" name="age" placeholder="Enter your age" required>
+            </div>
+            <div class="form-group">
+                <label for="gender">Gender:</label>
+                <select id="gender" name="gender" required>
+                    <option value="">Select</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="course">Course:</label>
+                <input type="text" id="course" name="course" placeholder="Enter your course name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number:</label>
+                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Address:</label>
+                <textarea id="address" name="address" rows="3" placeholder="Enter your address"></textarea>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
 </body>
-
 </html>
